--- a/src/api/Header.css
+++ b/src/api/Header.css
@@ -1,8 +1,17 @@
 .App-header {
   background-color: rgb(0, 0, 0);
-  height: 80px;
+  height: 100px;
   display: flex;
   align-items: center;
-  color: white;
+  color: rgb(49, 46, 61);
   padding: 0px 64px;
+}
+
+.App-title {
+  color: #fff;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 36px;
+  text-decoration: none;
+  border-bottom: 1px dashed #5ce198;
 }
